Use simpler array declarations
Remove trailing whitespace
Use final parameters
Use Integer cache
Use enhanced for loop
Better use of Collections API
Make inner class static
Remove unused imports
Use Long cache
Use Double cache
Use try-with-resources